--- a/charts/admission-controller/templates/scanner/secret.yaml
+++ b/charts/admission-controller/templates/scanner/secret.yaml
@@ -19,7 +19,7 @@ stringData:
   AUTH_BEARER_TOKEN: {{ include "sysdig.secureAPIToken" . }}
 {{- end }}
 ---
-{{- if .Values.scanner.ssl.ca.cert }}
+{{- if or .Values.scanner.ssl.ca.cert (eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.scanner.ssl)) "true") }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -27,6 +27,11 @@ metadata:
   namespace: {{ include "admissionController.namespace" . }}
   labels: {{- include "admissionController.scanner.labels" . | nindent 4 }}
 data:
+  {{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.scanner.ssl)) "true" }}
+  {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.scanner.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.scanner.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
+  {{- end }}
+  {{- if or .Values.scanner.ssl.ca.cert }}
   root_ca_file.crt: {{ .Values.scanner.ssl.ca.cert | b64enc | quote }}
+  {{- end }}
 {{- end }}
 {{- end }}
