--- a/charts/admission-controller/templates/webhook/secret.yaml
+++ b/charts/admission-controller/templates/webhook/secret.yaml
@@ -10,7 +10,7 @@ stringData:
   SECURE_API_TOKEN: {{ include "sysdig.secureAPIToken" . }}
 {{- end }}
 ---
-{{- if .Values.webhook.ssl.ca.cert }}
+{{- if or .Values.webhook.ssl.ca.cert (eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.webhook.ssl)) "true") }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -19,5 +19,10 @@ metadata:
   labels:
     {{ include "admissionController.webhook.labels" . | nindent 4 }}
 data:
+  {{- if or .Values.webhook.ssl.ca.cert }}
   root_ca_file.crt: {{ .Values.webhook.ssl.ca.cert | b64enc | quote }}
+  {{- end }}
+  {{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.webhook.ssl)) "true" }}
+  {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.webhook.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.webhook.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
+  {{- end }}
 {{- end }}
