--- a/charts/agent/templates/secrets.yaml
+++ b/charts/agent/templates/secrets.yaml
@@ -24,3 +24,15 @@ data:
 {{ toYaml .data | indent 2 }}
 ---
 {{- end }}
+{{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "agent.fullname" . }}-ca
+  namespace: {{ include "agent.namespace" . }}
+  labels:
+{{ include "agent.labels" . | indent 4 }}
+data:
+  {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
+---
+{{- end }}
