--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -12,3 +12,15 @@ data:
 {{- if and (eq .Values.imageSbomExtractor.cache.type "distributed") ((.Values.imageSbomExtractor.cache.redis).password) }}
   cache_redis_password: {{ .Values.imageSbomExtractor.cache.redis.password | b64enc | quote }}
 {{- end }}
+{{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "cluster-scanner.fullname" . }}-ca
+  namespace: {{ include "cluster-scanner.namespace" . }}
+  labels:
+{{ include "cluster-scanner.labels" . | indent 4 }}
+data:
+  {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
+{{- end }}
