--- a/charts/kspm-collector/templates/secret.yaml
+++ b/charts/kspm-collector/templates/secret.yaml
@@ -9,4 +9,17 @@ metadata:
 type: Opaque
 data:
  access-key : {{ include "kspmCollector.accessKey" . | b64enc | quote }}
+---
+{{- end }}
+{{- if eq (include "sysdig.custom_ca.enabled" (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "kspmCollector.fullname" . }}-ca
+  namespace: {{ include "kspmCollector.namespace" . }}
+  labels:
+{{ include "kspmCollector.labels" . | indent 4 }}
+data:
+  {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
+---
 {{- end }}
