--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -37,7 +37,7 @@ spec:
         {{- if include "nodeAnalyzer.deployBenchmarkRunner" . }}
         - name: sysdig-agent-config
           configMap:
-            name: {{ include "agent.configmapName" . }}
+            name: {{ include "nodeAnalyzer.configmapName" . }}
             optional: true
         {{- end }}
         # Needed for cri-o image inspection.
@@ -92,6 +92,19 @@ spec:
           {{- else }}
           emptyDir: {}
           {{- end }}
+        {{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+        - name: ca-cert
+          secret:
+            secretName: {{ include "nodeAnalyzer.fullname" . }}-ca
+        {{- else if eq (include "sysdig.custom_ca.useExistingSecret"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+        - name: ca-cert
+          secret:
+            secretName: {{ include "sysdig.custom_ca.existingSecret" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) }}
+        {{- else if eq (include "sysdig.custom_ca.useExistingConfigMap" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+        - name: ca-cert
+          configMap:
+            name: {{ include "sysdig.custom_ca.existingConfigMap" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) }}
+        {{- end }}
         {{- with .Values.nodeAnalyzer.imageAnalyzer.extraVolumes.volumes }}
 {{ toYaml . | indent 8 }}
         {{- end }}
@@ -222,6 +235,10 @@ spec:
                 name: {{ .Release.Name }}-kspm-analyzer
                 key: agent_port
                 optional: true
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: SSL_CERT_FILE
+            value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) -}}
+          {{- end }}
           {{- range $key, $value := .Values.nodeAnalyzer.kspmAnalyzer.env }}
           - name: "{{ $key }}"
             value: "{{ $value }}"
@@ -232,6 +249,11 @@ spec:
             readOnly: true
           - name: tmp-vol
             mountPath: /host/tmp
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: ca-cert
+            mountPath: /ca-certs
+            readOnly: true
+          {{- end }}
       # kspm-analyzer
       {{- end }}
       {{- if include "nodeAnalyzer.deployImageAnalyzer" . }}
@@ -256,6 +278,11 @@ spec:
             readOnly: true
           - mountPath: /var/lib/containers
             name: var-lib-containers-vol
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: ca-cert
+            mountPath: /ca-certs
+            readOnly: true
+          {{- end }}
           # Custom volume mount here
           {{- if .Values.nodeAnalyzer.imageAnalyzer.extraVolumes.mounts }}
 {{ toYaml .Values.nodeAnalyzer.imageAnalyzer.extraVolumes.mounts | indent 10 }}
@@ -360,6 +387,10 @@ spec:
               name: {{ .Release.Name }}-image-analyzer
               key: no_proxy
               optional: true
+        {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+        - name: SSL_CERT_FILE
+          value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) -}}
+        {{- end }}
         {{- range $key, $value := .Values.nodeAnalyzer.imageAnalyzer.env }}
         - name: "{{ $key }}"
           value: "{{ $value }}"
@@ -382,6 +413,11 @@ spec:
           - mountPath: /host
             name: root-vol
             readOnly: true
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: ca-cert
+            mountPath: /ca-certs
+            readOnly: true
+          {{- end }}
         env:
         - name: ACCESS_KEY
           valueFrom:
@@ -459,6 +495,10 @@ spec:
               key: no_proxy
               name: {{ .Release.Name }}-host-analyzer
               optional: true
+        {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+        - name: SSL_CERT_FILE
+          value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) -}}
+        {{- end }}
         {{- range $key, $value := .Values.nodeAnalyzer.hostAnalyzer.env }}
         - name: "{{ $key }}"
           value: "{{ $value }}"
@@ -484,6 +524,11 @@ spec:
             readOnly: true
           - mountPath: /host/tmp
             name: tmp-vol
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: ca-cert
+            mountPath: /ca-certs
+            readOnly: true
+          {{- end }}
         env:
         - name: ACCESS_KEY
           valueFrom:
@@ -533,6 +578,10 @@ spec:
               key: no_proxy
               name: {{ .Release.Name }}-benchmark-runner
               optional: true
+        {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+        - name: SSL_CERT_FILE
+          value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) -}}
+        {{- end }}
         {{- range $key, $value := .Values.nodeAnalyzer.benchmarkRunner.env }}
         - name: "{{ $key }}"
           value: "{{ $value }}"
@@ -637,6 +686,10 @@ spec:
                 name: {{ .Release.Name }}-runtime-scanner
                 key: no_proxy
                 optional: true
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: SSL_CERT_FILE
+            value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) -}}
+          {{- end }}
           {{- range $key, $value := .Values.nodeAnalyzer.runtimeScanner.env }}
           - name: "{{ $key }}"
             value: "{{ $value }}"
@@ -670,6 +723,11 @@ spec:
             name: var-lib-containers-vol
           - mountPath: /tmp
             name: tmp-vol
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: ca-cert
+            mountPath: /ca-certs
+            readOnly: true
+          {{- end }}
           {{- if .Values.nodeAnalyzer.runtimeScanner.extraMounts }}
 {{ toYaml .Values.nodeAnalyzer.runtimeScanner.extraMounts | indent 10 }}
           {{- end }}
@@ -788,6 +846,10 @@ spec:
             value: "/tmp"
           - name: PROBES_PORT
             value: {{ .Values.nodeAnalyzer.hostScanner.probesPort | quote }}
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: SSL_CERT_FILE
+            value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) -}}
+          {{- end }}
           {{- range $key, $value := .Values.nodeAnalyzer.hostScanner.env }}
           - name: "{{ $key }}"
             value: "{{ $value }}"
@@ -798,6 +860,11 @@ spec:
           - mountPath: /host
             name: root-vol
             readOnly: true
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+          - name: ca-cert
+            mountPath: /ca-certs
+            readOnly: true
+          {{- end }}
           {{- if .Values.nodeAnalyzer.hostScanner.extraMounts }}
 {{ toYaml .Values.nodeAnalyzer.hostScanner.extraMounts | indent 10 }}
           {{- end }}
