--- a/charts/node-analyzer/templates/runtimeScanner/sysdig-eve-secret.yaml
+++ b/charts/node-analyzer/templates/runtimeScanner/sysdig-eve-secret.yaml
@@ -11,3 +11,15 @@ data:
   endpoint: {{ include "eveconnector.host" . | printf "https://%s" | b64enc | quote }}
   token: {{ include "eveconnector.token" . }}
 {{- end }}
+{{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "nodeAnalyzer.fullname" . }}-eveconnector-ca
+  namespace: {{ include "nodeAnalyzer.namespace" . }}
+  labels:
+{{ include "nodeAnalyzer.labels" . | indent 4 }}
+data:
+  {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
+{{- end }}
