--- a/charts/rapid-response/templates/secrets.yaml
+++ b/charts/rapid-response/templates/secrets.yaml
@@ -23,18 +23,16 @@ type: Opaque
 data:
  passphrase: {{ include "rapidResponse.passphrase" . | b64enc | quote }}
 {{- end }}
-{{- if .Values.rapidResponse.ssl.ca.certs }}
+{{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.rapidResponse.ssl)) "true" }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "rapidResponse.fullname" . }}-additionalca
+  name: {{ template "rapidResponse.fullname" . }}-ca
   namespace: {{ .Release.Namespace }}
   labels:
 {{ include "rapidResponse.labels" . | indent 4 }}
 type: Opaque
 data:
-{{- range $index, $cert := ( .Values.rapidResponse.ssl.ca.certs) }}
-  root_ca_file_{{$index}}.crt: {{ $cert | b64enc }}
-{{- end }}
+  {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.rapidResponse.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.rapidResponse.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
 {{- end }}
