--- a/charts/node-analyzer/templates/secrets.yaml
+++ b/charts/node-analyzer/templates/secrets.yaml
@@ -11,4 +11,17 @@ type: Opaque
 data:
  access-key : {{ include "nodeAnalyzer.accessKey" . | b64enc | quote }}
 {{- end }}
+---
+{{- end }}
+{{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "nodeAnalyzer.fullname" . }}-ca
+  namespace: {{ include "nodeAnalyzer.namespace" . }}
+  labels:
+{{ include "nodeAnalyzer.labels" . | indent 4 }}
+data:
+  {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
+---
 {{- end }}
