--- a/charts/sysdig/Chart.yaml
+++ b/charts/sysdig/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: sysdig
-version: 1.16.3
+version: 1.16.4
 appVersion: 12.15.0
 description: Sysdig Monitor and Secure agent
 keywords:
@@ -15,14 +15,4 @@ icon: https://avatars.githubusercontent.com/u/5068817?s=200&v=4
 sources:
   - https://app.sysdigcloud.com/#/settings/user
   - https://github.com/draios/sysdig
-maintainers:
-  - name: lachie83
-    email: lachlan@deis.com
-  - name: bencer
-    email: jorge.salamero@sysdig.com
-  - name: nestorsalceda
-    email: nestor.salceda@sysdig.com
-  - name: airadier
-    email: alvaro.iradier@sysdig.com
-  - name: carillan81
-    email: carlos.arilla@sysdig.com
+deprecated: true
