--- a/charts/rapid-response/templates/secrets.yaml
+++ b/charts/rapid-response/templates/secrets.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "rapidResponse.fullname" . }}-access-key
+  namespace: {{ .Release.Namespace }}
   labels:
 {{ include "rapidResponse.labels" . | indent 4 }}
 type: Opaque
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "rapidResponse.fullname" . }}-passphrase
+  namespace: {{ .Release.Namespace }}
   labels:
 {{ include "rapidResponse.labels" . | indent 4 }}
 type: Opaque
@@ -27,6 +29,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "rapidResponse.fullname" . }}-additionalca
+  namespace: {{ .Release.Namespace }}
   labels:
 {{ include "rapidResponse.labels" . | indent 4 }}
 type: Opaque
