--- a/charts/rapid-response/templates/serviceaccount.yaml
+++ b/charts/rapid-response/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "rapidResponse.serviceAccountName" .}}
+  namespace: {{ .Release.Namespace }}
   labels:
 {{ include "rapidResponse.labels" . | indent 4 }}
 {{- end }}
