--- a/charts/agent/templates/rolebinding.yaml
+++ b/charts/agent/templates/rolebinding.yaml
@@ -3,6 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ include "agent.fullname" .}}
+  namespace: {{ include "agent.namespace" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
