--- a/charts/rapid-response/templates/configmap.yaml
+++ b/charts/rapid-response/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "rapidResponse.fullname" . }}-config
+  namespace: {{ .Release.Namespace }}
   labels:
 {{ include "rapidResponse.labels" . | indent 4 }}
 data:
